# fm_v5_counter_1

./: CMakeLists.txt  Makefile  notes.txt  sdkconfig  sdkconfig.old  useful_links.txt  wifi_credentials.txt
backups/: fram_test_backup.txt  old_config_h.txt
backups/1/: app_main_c.txt  rtc_c.txt  rtc_h.txt
backups/2/: app_main_c.txt  rtc_c.txt  rtc_h.txt
backups/3/: fram_c.txt
backups/4/: app_main_c.txt  fram_h.txt  notes.txt
backups/6/: notes.txt
backups/7/: notes.txt
backups/8/: mqtt_h.txt  time_init_c.txt  time_init_h.txt  wifi_c.txt
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  component.mk  config.h  device_private_key.txt  extern_vars.h  fram_task.c  fram_task.h  main.h  mqtt_google_primary.pem  mqtt_primary_backup.pem  task_common.h  upload_task.c  upload_task.h  wifi_password.txt  wifi_ssid.txt
main/components/crypto/: ecc.c  ecc.h  nn.c  nn.h  prng.c  prng.h  sha256.c  sha256.h
main/components/fram/: fram.c  fram.h
main/components/gpio/: gpio.c  gpio.h
main/components/jwt/: jwt.c  jwt.h
main/components/mqtt/: mqtt.c  mqtt.h
main/components/ntp/: ntp.c  ntp.h
main/components/rtc/: rtc.c  rtc.h
main/components/status/: status.c  status.h
main/components/time_init/: time_init.c
main/components/wifi/: wifi.c  wifi.h
